--- a/History.txt
+++ b/History.txt
@@ -1,1 +1,1 @@
-[{"time":"02.04.2024, 22:14:13","user_name":"Никита","message":"Привет"},{"time":"02.04.2024, 22:14:20","user_name":"Никита","message":"Как дела?"},{"time":"02.04.2024, 23:22:01","user_name":"Антон","message":"цугу"},{"time":"03.04.2024, 22:41:46","user_name":"Никита","message":"Привет"},{"time":"03.04.2024, 22:42:42","user_name":"Иван","message":"Привет"},{"time":"03.04.2024, 22:46:08","user_name":"Иван","message":"Как дела?"}]
+[{"time":"02.04.2024, 22:14:13","user_name":"Никита","message":"Привет"},{"time":"02.04.2024, 22:14:20","user_name":"Никита","message":"Как дела?"},{"time":"02.04.2024, 23:22:01","user_name":"Антон","message":"цугу"},{"time":"03.04.2024, 22:41:46","user_name":"Никита","message":"Привет"},{"time":"03.04.2024, 22:42:42","user_name":"Иван","message":"Привет"},{"time":"03.04.2024, 22:46:08","user_name":"Иван","message":"Как дела?"},{"time":"09.04.2024, 23:02:45","user_name":"Никита","message":"Привет"}]
